assets/scss/betterlinks.scss
@import './calendar/style';
@import './calendar/theme';
@import './common/fonts';
@import './common/variable';
@keyframes rotating {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}
.btl-rotating {
	animation: rotating 3s linear infinite;
}
.betterlinks-body {
	padding-top: 20px;
	padding-right: 20px;
	@import './common/reboot';
	@import './common/form';
	@import './common/components';
	@import './components/topbar';
	@import './components/category';
	@import './components/link';
	@import './components/list-view';
	@import './components/analytics';
	@import './components/tab';
	@import './components/doc';
	@import './components/broken-links';
	@import './components/modal';
	@import './components/quick-setup';
}
*,
html {
	scroll-behavior: smooth;
}
@import './components/pro-badge';
body {
	&.betterlinks-dark-mode {
		background: #36405a;
		.betterlinks-body {
			@import './control/plugin-mode';
		}
		.betterlinks-pro-notice.notice,
		.notice.betterlinks,
		.btl-notes.notice {
			background-color: #2c3650;
			color: $white;
		}
		@import './control/plugin-mode-modal';
		#wpfooter {
			color: $white;
			a {
				color: $success-lighten;
			}
		}
		.btl-modal-utm-builder .btl-modal-utm-builder__body .btl-modal-utm-builder__form-group button[type='button'],
		.btl-modal-utm-builder__title,
		.btl-analytic-advanced-search h3,
		.btl-confirmation-alert .btl-confirmation-buttons button:nth-child(2) {
			color: $white;
		}
		.btl-analytic-table-wrapper {
			.btl-analytic-link-name i.btl-analytics {
				border: 1px solid $white;
			}
		}
		.rmsc.multi-select * {
			background: #252f47;
			border-color: #36405a;
			color: #fff;
		}

		.btl-analytic {
			.btl-analytics-filter {
				border-color: #36405a;
			}
			// .btl-analytics-chart {
			.apexcharts-legend > div span.apexcharts-legend-text {
				color: #fff !important;
				&:hover {
					opacity: 0.7;
				}
			}
			.apexcharts-xaxis {
				.apexcharts-xaxis-label {
					fill: #fff !important;
				}
			}
			.apexcharts-tooltip.apexcharts-theme-light {
				border-color: #36405a;
				background-color: #36405a;
				.apexcharts-tooltip-title {
					background-color: #36405a;
				}
			}
			.apexcharts-toolbar {
				div.apexcharts-menu-icon > svg {
					fill: #fff;
					&:hover {
						opacity: 0.4;
					}
				}
				div.apexcharts-menu-open {
					background-color: #36405a;
					> div {
						&:hover {
							background-color: #fff;
							color: #36405a;
							// opacity: 0.4;
						}
					}
				}
			}
			// }
			.btl-analytic-table-wrapper {
				border-color: #36405a;

				.btl-analytic-table {
					.rdt_TableRow {
						&:hover {
							outline: #36405a solid 1px;
							border-bottom-color: #36405a;
							background-color: #36405a;
						}

						.rdt_TableCell > a {
							background-color: #36405a;
						}
					}
				}

				.btl-tabs {
					background-color: #2c3650;
				}
				.btl-click-filter .btl-search-button {
					border-color: #36405a;
					background-color: #252f47;
					color: $white;

					.search.loading > div {
						border-color: $white;
					}
				}
				.btl-single-click-info-header {
					> div span.btl-column-name {
						color: #fff;
					}
				}
			}
		}
	}
	> .btl-overlay {
		position: fixed;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		background-color: #000;
		z-index: 99;
		opacity: 0.65;
	}
	.pro-badge-new svg {
		width: 50px;
	}
}
.btl-date-range-picker-wrap {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 9999;
	display: flex;
	justify-content: center;
	text-align: center;
	padding: 50px;
	overflow-x: hidden;
	overflow-y: auto;
	.btl-date-range-picker {
		position: relative;
		display: inline-block;
		background: white;
		border-radius: 6px;
		margin: auto;
		.btn-date-range-close {
			position: absolute;
			top: 0;
			right: 0;
			z-index: 999;
			border: 0;
			background: transparent;
			outline: none;
			color: $secondary-lighten;
			padding: 5px 5px;
			cursor: pointer;
		}
		.rdrDateRangePickerWrapper .rdrInputRanges {
			display: none;
		}
	}
}
.btl-tooltip {
	position: relative;
	display: inline-block;
	line-height: 1;
	margin-left: 10px;
	.btl-tooltiptext {
		visibility: hidden;
		width: max-content;
		max-width: 220px;
		background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
		font-size: 14px;
		color: #fff;
		// text-align: left;
		border-radius: 6px;
		padding: 10px;
		position: absolute;
		z-index: 1;
		bottom: 150%;
		left: 50%;
		transform: translateX(-50%);
		&::after {
			content: '';
			position: absolute;
			top: 100%;
			left: 50%;
			margin-left: -5px;
			border-width: 5px;
			border-style: solid;
			border-color: #003be2 transparent transparent transparent;
		}
	}
	&:hover .btl-tooltiptext {
		visibility: visible;
	}
}
.betterlinks-auto-create-link {
	.btl-tooltip {
		padding: 0;
		background-color: transparent;
		border: none;
		margin: 0;
		padding: 0;
		text-align: inherit;
		border-radius: 0;
		appearance: none; // Just in case we missed anything.
		margin-left: 3px;
		cursor: pointer;

		.btl-tooltiptext {
			width: 60px;
			font-size: 8px;
		}
	}
}

@import './components/modal';
@import './components/utm_builder';
@import './components/customize_link_preview';

// expire status circle styles starts

span.btl-expire-status-dot {
	height: 0;
	width: 0;
	border-radius: 50%;
	display: inline-block;
	padding: 5px;
}

.btl-expire-status-dot-parent .btl-tooltiptext {
	width: 90px;
	text-transform: capitalize;
}

.betterlinks-body .btl-list-view .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent {
	margin: 0;
	padding: 0;
}

.betterlinks-body .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent,
.betterlinks-body .btl-list-view .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent {
	margin-right: 10px;
}

span.btl-expire-status-dot.publish {
	background-color: #0bb876;
}
/* ... */

